<resources>
    <string name="app_name">GeoNotes</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">GeoNotes</string>
    <string name="track_start">track me</string>
    <string name="track_stop">stop</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_db">Saved Locations</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="note">Note</string>
    <string name="show_on_map">Show on Map</string>
    <string name="title">Title</string>
    <string name="titleBold"><b>Title</b></string>

    <string name="locationError">No Location found ... Save failed</string>
    <string name="googleError">Can not connect to Google Services. Check into GooglePlay Service or Your connection</string>
    <string name="saveLocationTitle">Save your current Location</string>
    <string name="saveTrackTitle">Save your latest Track</string>
    <string name="standardWaypointTitle">WIN Factorial</string>
    <string name="settingUpdateInterval">Update interval in seconds</string>


</resources>
