<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SettingActivity">

    <TextView
        android:id="@+id/settingsUpdateInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingUpdateInterval"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/settingsUpdateIntervalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/settingsUpdateInterval"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="settingsSave"
        android:text="@string/save" />

    <Button
        android:id="@+id/settingsCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settingsSave"
        android:onClick="settingsCancel"
        android:text="@string/cancel" />

</RelativeLayout>
